syntax = "proto3";

option csharp_namespace = "CoffeeService";

package Coffee;

// Coffee service definition
service Coffee{
    rpc GetRandomCoffee (Empty) returns (CoffeeResponse);
    rpc GetAllCoffee (Empty) returns (CoffeeResponses);
}

// this is an empty message
message Empty{}

// this is single Coffee response
message CoffeeResponse{
    string name=1;
}

message CoffeeResponses{
    repeated CoffeeResponse coffeeResponse = 1;
}